browser: fix iframe view overflow issue

--- a/browser/admin/css/adminIntegratorSettings.css
+++ b/browser/admin/css/adminIntegratorSettings.css
@@ -114,7 +114,6 @@ body {
 
   padding-left: 0px;
   margin-left: 0px;
-  overflow: hidden;
   display: block;
 }
 
